# awslambda-contactemail

./: .gitignore  Cargo.toml  LICENSE  README.md  cloudformation.yml  demo.html  lambda.js
src/: main.rs
