[package]
edition = "2018"
name = "contact_form_email_lambda_function"
version = "0.1.0"
autobins = false

[dependencies]
lambda_runtime = "^0.4"
log = "^0.4"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
tokio = { version = "1.0", features = ["macros", "io-util", "sync", "rt-multi-thread"] }
simple_logger = "^1"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
